# sqlalchemy-things

./: .mypy.ini  .readthedocs.yml  .travis.yml  README.rst  example.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: conf.py  examples.rst  index.rst  installation.rst  reference.rst  releases.rst
sqlalchemy_things/: __init__.py  pagination.py
sqlalchemy_things/column_types/: __init__.py  uuid.py
sqlalchemy_things/decl/: __init__.py  abstract.py  inheritance.py  primary_keys.py
sqlalchemy_things/declarative/: __init__.py  abstract.py  base.py  inheritance.py  primary_keys.py
sqlalchemy_things/types/: __init__.py  uuid.py
src/sqlalchemy_things/: __init__.py  pagination.py
src/sqlalchemy_things/column_types/: __init__.py  uuid.py
src/sqlalchemy_things/declarative/: __init__.py  base.py  primary_keys.py
tests/: conftest.py  test_column_types.py  test_declarative_inheritance.py  test_declarative_joined_table_inheritance.py  test_declarative_primary_keys.py  test_declarative_single_table_inheritance.py  test_metainfo.py  test_pagination.py  test_sqlalchemy_things.py  test_types.py
