[tool.poetry]
name = "sqlalchemy-things"
version = "0.10.2"
description = "Utility collection for development with SQLalchemy ORM."
license = "MIT"

authors = [
    "Ruslan Ilyasovich Gilfanov <ri.gilfanov@yandex.ru>",
]
maintainers = [
    "Ruslan Ilyasovich Gilfanov <ri.gilfanov@yandex.ru>",
]

readme = "README.rst"
homepage = "https://github.com/ri-gilfanov/sqlalchemy-things"
repository = "https://github.com/ri-gilfanov/sqlalchemy-things"
documentation = "https://sqlalchemy-things.readthedocs.io/"

keywords = ["sqlalchemy"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.4.27"
aiomysql = { version = ">=0.0.21", optional = true }
aiosqlite = { version = ">=0.17.0", optional = true }
asyncpg = { version = ">=0.23.0", optional = true }

[tool.poetry.extras]
mysql = ["aiomysql"]
postgresql = ["asyncpg"]
sqlite = ["aiosqlite"]

[tool.poetry.dev-dependencies]
aiosqlite = ">=0.17.0"
asyncpg = ">=0.25.0"
flake8 = ">=4.0.1"
isort = ">=5.10.1"
mypy = ">=0.910"
pytest = ">=6.2.5"
pytest-asyncio = ">=0.16.0"
pytest-cov = ">=3.0.0"
Sphinx = ">=4.3.1"
sphinx_rtd_theme = ">=1.0.0"
tomli = ">=1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
known_first_party = ["sqlalchemy_things"]
known_third_party = ["sqlalchemy"]
profile = "wemake"
src_paths = ["sqlalchemy_things", "tests"]

[tool.mypy]
files = ["sqlalchemy_things", "tests"]
plugins = "sqlalchemy.ext.mypy.plugin"

[[tool.mypy.overrides]]
module = ['sqlalchemy.*']
ignore_missing_imports = true
