[tool.poetry]
name = "sqlalchemy-things"
packages = [{include = "sqlalchemy_things", from = "src" }]
version = "1.0.1"
description = "Utility collection for development with SQLalchemy ORM."
license = "MIT"

authors = [
    "Ruslan Ilyasovich Gilfanov <ri.gilfanov@yandex.ru>",
]
maintainers = [
    "Ruslan Ilyasovich Gilfanov <ri.gilfanov@yandex.ru>",
]

readme = "README.rst"
homepage = "https://github.com/ri-gilfanov/sqlalchemy-things"
repository = "https://github.com/ri-gilfanov/sqlalchemy-things"
documentation = "https://sqlalchemy-things.readthedocs.io/"

keywords = ["sqlalchemy"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^2.0.34"
aiomysql = { version = ">=0.2.0,<1", optional = true }
aiosqlite = { version = ">=0.20.0,<1", optional = true }
asyncpg = { version = ">=0.29.0,<1", optional = true }

[tool.poetry.extras]
mysql = ["aiomysql"]
postgresql = ["asyncpg"]
sqlite = ["aiosqlite"]

[tool.poetry.dev-dependencies]
aiomysql = ">=0.2.0,<1"
aiosqlite = ">=0.20.0,<1"
asyncpg = ">=0.29.0,<1"
mypy = ">=1.11.2"
pytest = ">=8.3.3"
pytest-asyncio = ">=0.21.2"
pytest-cov = ">=5.0.0"
ruff = ">=0.6.5"
Sphinx = ">=7.1.2"
sphinx_rtd_theme = ">=2.0.0"
tomli = { version = "^2.0.1", optional = true, python = "~3.8 || ~3.9 || ~3.10" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
known_first_party = ["sqlalchemy_things"]
known_third_party = ["sqlalchemy"]
profile = "wemake"
src_paths = ["src", "tests"]

[tool.mypy]
files = ["example.py", "src", "tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101", "ANN102", "ANN401", "ARG002", "COM812", "D", "FA102", "ISC001", "N803",
    "N806", "PGH003", "PLR2004", "RUF001", "RUF002", "RUF003", "RUF012", "Q000",
]

[tool.ruff.lint.extend-per-file-ignores]
"docs/*.py" = ["A001", "INP001"]
"tests/*.py" = ["PLR2004", "S101"]

[tool.ruff.lint.isort]
order-by-type = true

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.pylint]
max-args = 13
