[tool.poetry]
name = "sqlalchemy-things"
packages = [{include = "sqlalchemy_things", from = "src" }]
version = "1.1.0"
description = "Utility collection for development with SQLalchemy ORM."
license = "MIT"

authors = [
    "Ruslan Ilyasovich Gilfanov <ri.gilfanov@yandex.ru>",
]
maintainers = [
    "Ruslan Ilyasovich Gilfanov <ri.gilfanov@yandex.ru>",
]

readme = "README.rst"
homepage = "https://github.com/ri-gilfanov/sqlalchemy-things"
repository = "https://github.com/ri-gilfanov/sqlalchemy-things"
documentation = "https://sqlalchemy-things.readthedocs.io/"

keywords = ["sqlalchemy"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.9"
aiomysql = { version = ">=0.2.0,<1", optional = true }
aiosqlite = { version = ">=0.20.0,<1", optional = true }
asyncpg = { version = ">=0.30.0,<1", optional = true }
greenlet = "^3.1.1"
sqlalchemy = "^2.0.36"

[tool.poetry.extras]
mysql = ["aiomysql"]
postgresql = ["asyncpg"]
sqlite = ["aiosqlite"]

[tool.poetry.dev-dependencies]
aiomysql = ">=0.2.0,<1"
aiosqlite = ">=0.20.0,<1"
asyncpg = ">=0.30.0,<1"
mypy = ">=1.13.0"
pytest = ">=8.3.4"
pytest-asyncio = ">=0.24.0"
pytest-cov = ">=6.0.0"
ruff = '>=0.8.2'
sphinx = ">=7.4.7"
sphinx_rtd_theme = ">=3.0.2"
tomli = { version = "^2.2.1", optional = true, python = "~3.9 || ~3.10" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["example.py", "src", "tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401", "ARG002", "COM812", "D", "FA102", "ISC001", "N803", "N806", "PGH003",
    "PLR2004", "RUF001", "RUF002", "RUF003", "RUF012", "Q000",
]

[tool.ruff.lint.extend-per-file-ignores]
"docs/*.py" = ["A001", "INP001"]
"tests/*.py" = ["PLR2004", "S101"]

[tool.ruff.lint.isort]
order-by-type = true

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.pylint]
max-args = 4
